--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
+    "npm": "^6.13.4",
+    "popper.js": "^1.16.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-particles-js": "^2.7.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.4"
   },
   "scripts": {
